<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Funimals</string>
    <string name="menu_settings">Settings</string>
	
	<string name="description">Image Description</string>
	
	<string name="general_background"> </string>
	<string name="text_space"> </string>
	<string name="pe_bgdescription">PE Background Image Description</string>
	<string name="pe_gridviewdescription">PE GridView Description</string>
	
	<string name="splash">Swift Shot</string>
	
	<string name="user_name">%1$s</string>
	<string name="user_age">%1$d years old</string>
	<string name="user_level">%1$s</string>
	<string name="user_img">User Image</string>
	<string name="account_selection">Account Selection</string>
	
	<string name="button_addaccount">Add New Account</string>
	
	<string name="button_home">Home</string>
	<string name="button_stories">Stories</string>
	<string name="button_sound_on">Sound: On</string>
	<string name="button_sound_off">Sound: Off</string>
	<string name="button_info">Information</string>
	
	<string name="button_back">Back</string>
	<string name="button_next">Next</string>
	
	<string name="button_newpicture">New Picture</string>
	<string name="button_viewstories">View Stories</string>
	<string name="button_seetutorial">See Tutorial</string>
	
	<string name="button_readstory">Read Story</string>
	
	<string name="img_story">Story Image</string>
	<string name="story_title"> </string>
	
	<string name="registration_name">What is your name?</string>
	<string name="registration_age">How old are you?</string>
	<string name="registration_year">What grade are you in?</string>
	
	<string name="registration_hint_name">Your name here</string>
	<string name="registration_age6">6 years old</string>
	<string name="registration_age7">7 years old</string>
	<string name="registration_age8">8 years old</string>
	<string name="registration_prep">Prep</string>
	<string name="registration_grade1">Grade 1</string>
	<string name="registration_grade2">Grade 2</string>
	<string name="registration_grade3">Grade 3</string>
	
	<string name="info">SWIFT SHOT
	    \nMark Castilo
	    \nSharmaine Lim
	    \nOliver Syson</string>
	
	<string name="saving_story">Saving Story</string>
	<string name="generating_story">Generating Story</string>
	<string name="loading_story">Loading Story Maker</string>
	
	<string name="abs_content">bg_bedroom</string>
	<string name="text_bg">Bedroom</string>
	<string name="text_title">Title</string>
	<string name="text_story">Story</string>
	<string name="text_page">Page 1</string>
	<string name="text_word">Word</string>
	<string name="text_pos">PartOfSpeech</string>
	<string name="text_def">Definition</string>
	
	<string name="info_credits">Info</string>
</resources>