<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/library_openbook" >

    <ImageView
        android:id="@+id/userbook_btn_viewstories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="25dp"
        android:contentDescription="@string/general_background"
        android:scaleType="fitXY"
        android:src="@drawable/library_next" />

    <LinearLayout
        android:layout_width="630dp"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="20dp"
        android:layout_toLeftOf="@+id/userbook_btn_viewstories"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="50dp"
            android:paddingRight="50dp"
            android:weightSum="2" >

            <ImageView
                android:id="@+id/userbook_btn_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/button_home"
                android:src="@drawable/general_home" />

            <ImageView
                android:id="@+id/userbook_btn_library"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/button_library"
                android:src="@drawable/general_library" />
        </LinearLayout>

        <ImageView
            android:id="@+id/userbook_img_user"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:contentDescription="@string/user_img"
            android:src="@drawable/usersdefault" />

        <TextView
            android:id="@+id/userbook_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/user_name"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/userbook_age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/user_age"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/userbook_level"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/user_level"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <ImageView
        android:id="@+id/userbook_darken"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:alpha="0.75"
        android:visibility="invisible"
        android:src="@drawable/library_openbook_darken"
        android:contentDescription="@string/text_space" />

</RelativeLayout>