<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/general_background" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="6" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:padding="5dp" >

            <ImageView
                android:id="@+id/home_btn_soundon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/button_sound_on"
                android:src="@drawable/general_soundon" />

            <ImageView
                android:id="@+id/home_btn_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/button_info"
                android:src="@drawable/general_info" />
        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/app_name"
            android:scaleType="fitXY"
            android:src="@drawable/general_title" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:padding="20dp" >

            <LinearLayout
                android:id="@+id/linearLayout1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:weightSum="3" >

                <ImageView
                    android:id="@+id/home_btn_newpicture"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/button_newpicture"
                    android:src="@drawable/general_newpicture" />

                <ImageView
                    android:id="@+id/home_btn_viewlibrary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/button_viewlibrary"
                    android:src="@drawable/general_viewlibrary" />

                <ImageView
                    android:id="@+id/home_btn_seetutorial"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/button_seetutorial"
                    android:src="@drawable/general_seetutorial" />
            </LinearLayout>

            <include
                android:id="@+id/home_usercanvas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignTop="@+id/linearLayout1"
                layout="@layout/user_canvas" />

        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>