<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/library_openbook" >

    <LinearLayout
        android:id="@+id/userstories_container_main"
        android:layout_width="630dp"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="20dp"
        android:layout_marginRight="90dp"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/userstories_img_story"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:layout_gravity="center"
            android:layout_marginLeft="45dp"
            android:layout_marginRight="45dp"
            android:contentDescription="@string/img_story"
            android:scaleType="fitXY"
            android:src="@drawable/library_preview_default" />

        <TextView
            android:id="@+id/userstories_txt_storytitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="45dp"
            android:layout_marginRight="45dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/library_title"
            android:gravity="center"
            android:text="@string/story_title"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="20dp"
        android:layout_toLeftOf="@+id/userstories_container_main"
        android:orientation="vertical"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:weightSum="10" >

        <ImageView
            android:id="@+id/userstories_btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:contentDescription="@string/button_back"
            android:src="@drawable/general_back"
            android:layout_weight="1" />

        <ListView
            android:id="@+id/userstories_titles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="9" >
        </ListView>

        <ImageView
            android:id="@+id/userstories_btn_addstory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/button_newpicture"
            android:src="@drawable/library_addstory"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:layout_weight="1" />
    </LinearLayout>

</RelativeLayout>