<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/general_background" >

    <ImageView
        android:id="@+id/registrationname_btn_back"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_margin="15dp"
        android:contentDescription="@string/button_back"
        android:scaleType="fitXY"
        android:onClick="clicked_btnBack"
        android:src="@drawable/general_back_button_selector" />

    <ImageView
        android:id="@+id/registrationname_btn_next"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_margin="15dp"
        android:contentDescription="@string/button_next"
        android:scaleType="fitXY"
        android:onClick="clicked_btnNext"
        android:visibility="gone"
        android:src="@drawable/general_next_button_selector" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="@dimen/registername_height"
        android:layout_below="@+id/registrationname_btn_back"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp"
        android:background="@drawable/general_entername"
        android:orientation="vertical"
        android:paddingLeft="25dp"
        android:paddingRight="27dp" >

        <Space
            android:layout_width="match_parent"
            android:layout_height="80dp" />

        <EditText
            android:id="@+id/registration_txt_name"
            android:layout_width="@dimen/layout_widthname"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_leftname"
            android:background="@drawable/general_textboxname"
            android:gravity="center"
            android:hint="@string/registration_hint_name"
            android:inputType="textPersonName"
            android:padding="5dp"
            android:textSize="@dimen/text_size" />
    </LinearLayout>

</RelativeLayout>